--- a/deliverables/rocky/puppet-aodh.yaml
+++ b/deliverables/rocky/puppet-aodh.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-aodh
         hash: 3f93e4867cf1d90a85ce2d9e406cf859975c0bb5
+  - projects:
+      - hash: 3a57c15d37db34c67e37c5ce0ba372289ee2a0f6
+        repo: openstack/puppet-aodh
+    version: 13.3.0
