--- a/deliverables/rocky/puppet-barbican.yaml
+++ b/deliverables/rocky/puppet-barbican.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-barbican
         hash: b0a27401c9560e8e468cc7040b81dfbc8048a571
+  - projects:
+      - hash: c06d5dbe4b571bf6962bf9608cbcca238442870d
+        repo: openstack/puppet-barbican
+    version: 13.3.0
