--- a/deliverables/rocky/puppet-ceilometer.yaml
+++ b/deliverables/rocky/puppet-ceilometer.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-ceilometer
         hash: e2a4f8ef6fc73b10c1a8916b7906ac87cb2ff6a3
+  - projects:
+      - hash: ef9c82f4ad7eea9a731196525b04d61c5115d389
+        repo: openstack/puppet-ceilometer
+    version: 13.3.0
