--- a/deliverables/rocky/puppet-cinder.yaml
+++ b/deliverables/rocky/puppet-cinder.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-cinder
         hash: 11ccfb41dacc3b2a314a240272227f6812b92261
+  - projects:
+      - hash: 6394ccb22f76a346026042de04d4d0ca7f2f0de0
+        repo: openstack/puppet-cinder
+    version: 13.3.0
