--- a/deliverables/rocky/puppet-cloudkitty.yaml
+++ b/deliverables/rocky/puppet-cloudkitty.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-cloudkitty
         hash: d289566390146c373da857cb64d74db46da86b33
+  - projects:
+      - hash: 77515ec63336c336623cd4379b51b871eb06a103
+        repo: openstack/puppet-cloudkitty
+    version: 2.3.0
