--- a/deliverables/rocky/puppet-congress.yaml
+++ b/deliverables/rocky/puppet-congress.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-congress
         hash: bdc7d70758a20b29022b97493d5514257866d709
+  - projects:
+      - hash: ab8a734de2602232a1bb46c8861ae5ea6d4892b5
+        repo: openstack/puppet-congress
+    version: 13.3.0
