--- a/deliverables/rocky/puppet-designate.yaml
+++ b/deliverables/rocky/puppet-designate.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-designate
         hash: 4fac11edff8facf79a1fed5fbac27b5c06f79ecc
+  - projects:
+      - hash: fd1442a130f7f566fd4a5dd8e1c5b2831702e5f0
+        repo: openstack/puppet-designate
+    version: 13.3.0
