--- a/deliverables/rocky/puppet-ec2api.yaml
+++ b/deliverables/rocky/puppet-ec2api.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-ec2api
         hash: 96135da577d0fa7cbe6004863369e96249845a8e
+  - projects:
+      - hash: ec1082065d6cefb8bc0def3815f05c25b2aa84d6
+        repo: openstack/puppet-ec2api
+    version: 13.3.0
