--- a/deliverables/rocky/puppet-freezer.yaml
+++ b/deliverables/rocky/puppet-freezer.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-freezer
         hash: 9bff9f921cd343390598464929dab943da871d9c
+  - projects:
+      - hash: eb4592e0598acac5bb3a594f2a773cc49bff8c02
+        repo: openstack/puppet-freezer
+    version: 2.3.0
