--- a/deliverables/rocky/puppet-glance.yaml
+++ b/deliverables/rocky/puppet-glance.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-glance
         hash: 3a466a58ee42fdab71e22e10fc0256a2103a4d09
+  - projects:
+      - hash: 7a6e865e7fca5956c4ace19aa963c0ef133bd219
+        repo: openstack/puppet-glance
+    version: 13.3.0
