--- a/deliverables/rocky/puppet-glare.yaml
+++ b/deliverables/rocky/puppet-glare.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-glare
         hash: 30f97209ea54288801d8af10cd1d883988cb9f2e
+  - projects:
+      - hash: 17b1c62b922fa780f4cc2648ef130610d8c54738
+        repo: openstack/puppet-glare
+    version: 2.3.0
