--- a/deliverables/rocky/puppet-gnocchi.yaml
+++ b/deliverables/rocky/puppet-gnocchi.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-gnocchi
         hash: 8c7b63dfa74c4aef4f04713308a21f6f7a185f88
+  - projects:
+      - hash: 37d7e1f0553d4c6909b10a3d1321ac134c263443
+        repo: openstack/puppet-gnocchi
+    version: 13.3.0
