--- a/deliverables/rocky/puppet-heat.yaml
+++ b/deliverables/rocky/puppet-heat.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-heat
         hash: 2f61c0f47a37bd759cc729936ef3a46c216f80a7
+  - projects:
+      - hash: 6ab242333581c932932184dd55eea4d8af673247
+        repo: openstack/puppet-heat
+    version: 13.3.0
