--- a/deliverables/rocky/puppet-horizon.yaml
+++ b/deliverables/rocky/puppet-horizon.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-horizon
         hash: 3e5a4a66cfa31d582eed3bb07d9e32f3d1b842ba
+  - projects:
+      - hash: dd46ba1501fe0c44f90ac341703e2d9bd9d4048e
+        repo: openstack/puppet-horizon
+    version: 13.3.0
