--- a/deliverables/rocky/puppet-ironic.yaml
+++ b/deliverables/rocky/puppet-ironic.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-ironic
         hash: 156961baffb481aa8a716ed2216ed85a673055e7
+  - projects:
+      - hash: 516b4e99e356a3225ab674ef042544dfa3484dbb
+        repo: openstack/puppet-ironic
+    version: 13.3.0
