--- a/deliverables/rocky/puppet-magnum.yaml
+++ b/deliverables/rocky/puppet-magnum.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-magnum
         hash: b7922898d98dfa1c791b870455791854ca21925e
+  - projects:
+      - hash: fee68d28871dc9278fe55f537cb05e6e4955c4be
+        repo: openstack/puppet-magnum
+    version: 13.3.0
