--- a/deliverables/rocky/puppet-manila.yaml
+++ b/deliverables/rocky/puppet-manila.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-manila
         hash: 7f14b28e14189d3595cf702da4a1e57398a45e1d
+  - projects:
+      - hash: 0a2687ab87649e5d6d511fe3c5b39e6ed15863fe
+        repo: openstack/puppet-manila
+    version: 13.3.0
