--- a/deliverables/rocky/puppet-monasca.yaml
+++ b/deliverables/rocky/puppet-monasca.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-monasca
         hash: 3857757a386823856b9508c4b626fc8a07c98c21
+  - projects:
+      - hash: 6e55416d29e273342a2d6f2c658d8e6a17d0f852
+        repo: openstack/puppet-monasca
+    version: 2.3.0
