--- a/deliverables/rocky/puppet-murano.yaml
+++ b/deliverables/rocky/puppet-murano.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-murano
         hash: 82580fb844c93cf478d871ef52aafbf3e779f134
+  - projects:
+      - hash: 99737fdf9231a2315adeab80a6ec74124d641a8c
+        repo: openstack/puppet-murano
+    version: 13.3.0
