--- a/deliverables/rocky/puppet-nova.yaml
+++ b/deliverables/rocky/puppet-nova.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-nova
         hash: 7b0c2cf947be752b7e2a7f70fdee679fc663c64f
+  - projects:
+      - hash: dad454f469d3b287ad86e8c6145644ca120d4c00
+        repo: openstack/puppet-nova
+    version: 13.3.0
