--- a/deliverables/rocky/puppet-octavia.yaml
+++ b/deliverables/rocky/puppet-octavia.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-octavia
         hash: 82819173b452ef5418cf6ddae9eec9d2304bf212
+  - projects:
+      - hash: 7361bae076f842ebd7ac469aa3428cf49b8e722a
+        repo: openstack/puppet-octavia
+    version: 13.3.0
