--- a/deliverables/rocky/puppet-openstack_extras.yaml
+++ b/deliverables/rocky/puppet-openstack_extras.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-openstack_extras
         hash: 6d1c96ee3c88afb686ca867ff85c9c0fbe6a0c31
+  - projects:
+      - hash: ef1a93bfec8e9af722b16041f7b44f68d06c41bb
+        repo: openstack/puppet-openstack_extras
+    version: 13.3.0
