--- a/deliverables/rocky/puppet-openstacklib.yaml
+++ b/deliverables/rocky/puppet-openstacklib.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-openstacklib
         hash: 9c5e2a1c0160e5a27bd91143fd4cb17677d6042b
+  - projects:
+      - hash: 5e9263597a42e1fe7b3b09da4e87f18a5fed6ac2
+        repo: openstack/puppet-openstacklib
+    version: 13.3.0
