--- a/deliverables/rocky/puppet-oslo.yaml
+++ b/deliverables/rocky/puppet-oslo.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-oslo
         hash: 8963d61cb3b912de14aac18ae8e22b685dbaafe1
+  - projects:
+      - hash: ee8fc47cb2d8c94acf7decb5a70ff8b1e6edebde
+        repo: openstack/puppet-oslo
+    version: 13.3.0
