--- a/deliverables/rocky/puppet-ovn.yaml
+++ b/deliverables/rocky/puppet-ovn.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-ovn
         hash: 25020cc69993580f8b499d1a4dfd7087e46e8429
+  - projects:
+      - hash: 8bce24515726e737b247559f7bc5ac4f4faeeef1
+        repo: openstack/puppet-ovn
+    version: 13.3.0
