--- a/deliverables/rocky/puppet-qdr.yaml
+++ b/deliverables/rocky/puppet-qdr.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-qdr
         hash: 6f3ecac6fa9133854405c9289b41ad7fd82bb8b1
+  - projects:
+      - hash: 0cd64c1ff4e3458bfef639fb389c465f86c3a0d2
+        repo: openstack/puppet-qdr
+    version: 2.3.0
