--- a/deliverables/rocky/puppet-rally.yaml
+++ b/deliverables/rocky/puppet-rally.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-rally
         hash: a25638ad1c044b8e972e9b6ed00e4d74b2611343
+  - projects:
+      - hash: 212cabb4f901aeb9e1f06fd471f1de59b778c3bf
+        repo: openstack/puppet-rally
+    version: 1.3.0
