--- a/deliverables/rocky/puppet-sahara.yaml
+++ b/deliverables/rocky/puppet-sahara.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-sahara
         hash: ca7a75db86b47bf27c44e525f3adc176e6962f84
+  - projects:
+      - hash: 17087c989ac8187d854077fb29b93c8a1bfbfee3
+        repo: openstack/puppet-sahara
+    version: 13.3.0
