--- a/deliverables/rocky/puppet-swift.yaml
+++ b/deliverables/rocky/puppet-swift.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-swift
         hash: c77abdc9788b653754b90970e5e98129aac0f252
+  - projects:
+      - hash: 998716b1d0e49a042a97d01c714788bf39e5f6ff
+        repo: openstack/puppet-swift
+    version: 13.3.0
