--- a/deliverables/rocky/puppet-tacker.yaml
+++ b/deliverables/rocky/puppet-tacker.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-tacker
         hash: c9a47825ab013455fe6a1eca78a9d3b81bfe0496
+  - projects:
+      - hash: ff9448ca8a59e8212d7df7f22a6fa6e1df5d6013
+        repo: openstack/puppet-tacker
+    version: 13.3.0
