--- a/deliverables/rocky/puppet-trove.yaml
+++ b/deliverables/rocky/puppet-trove.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-trove
         hash: 6122c9f20b3c12f42fdb9523e68f7284e3b0f899
+  - projects:
+      - hash: e65b323662fe77bcf250fdb7ed936e143bbe3ad3
+        repo: openstack/puppet-trove
+    version: 13.3.0
