--- a/deliverables/rocky/puppet-vitrage.yaml
+++ b/deliverables/rocky/puppet-vitrage.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-vitrage
         hash: 13920eb4cab0b81fca698b8e3d3cbc92538ef32c
+  - projects:
+      - hash: a21be1ce9ce87cc995eef04233746bb43a29de38
+        repo: openstack/puppet-vitrage
+    version: 3.3.0
