--- a/deliverables/rocky/puppet-vswitch.yaml
+++ b/deliverables/rocky/puppet-vswitch.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-vswitch
         hash: 2835e9b8044405224776636215754e2fbcda9c9c
+  - projects:
+      - hash: ed0e13c8867efceb51dfeece719c1c0dce98fbaf
+        repo: openstack/puppet-vswitch
+    version: 9.3.0
