--- a/deliverables/rocky/puppet-watcher.yaml
+++ b/deliverables/rocky/puppet-watcher.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-watcher
         hash: 72a12db1eb1c4053c3e9eea8470b440dee135feb
+  - projects:
+      - hash: 0b2e4b1a11a95c2394c81d6833a3bae5f59da319
+        repo: openstack/puppet-watcher
+    version: 13.3.0
