--- a/deliverables/rocky/puppet-zaqar.yaml
+++ b/deliverables/rocky/puppet-zaqar.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-zaqar
         hash: 6ab03751496af5f2ef44ef3cf2276877087d5664
+  - projects:
+      - hash: 96080c5b2c741450aa0e1c4d1119fdc18faea067
+        repo: openstack/puppet-zaqar
+    version: 13.3.0
