--- a/deliverables/rocky/puppet-keystone.yaml
+++ b/deliverables/rocky/puppet-keystone.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-keystone
         hash: 6d54f6a047689ea242ecde60d6d35624e9eb8eb8
+  - projects:
+      - hash: ec7748e561c550e27c7051d3b79bd768603843d0
+        repo: openstack/puppet-keystone
+    version: 13.3.0
