--- a/deliverables/rocky/puppet-neutron.yaml
+++ b/deliverables/rocky/puppet-neutron.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-neutron
         hash: 59e883cac86f7c9ecf093636133c7d873b62a195
+  - projects:
+      - hash: fee69de01ae5ddac3ee7ee0b37b33124c8aa874b
+        repo: openstack/puppet-neutron
+    version: 13.3.0
