--- a/deliverables/rocky/puppet-panko.yaml
+++ b/deliverables/rocky/puppet-panko.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-panko
         hash: 5b3caa884122be7bb4b247618d2ab846d381961c
+  - projects:
+      - hash: 62f77f97f9a57b5a0078dbc13e3d6b44e3006a75
+        repo: openstack/puppet-panko
+    version: 13.3.0
