--- a/deliverables/rocky/puppet-tempest.yaml
+++ b/deliverables/rocky/puppet-tempest.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-tempest
         hash: 45e3f6a5f209833798b874d1a0d2df2672e238e1
+  - projects:
+      - hash: b6d053492ae0b7804bd9ae947ab3f04ce8eeca79
+        repo: openstack/puppet-tempest
+    version: 13.3.0
