--- a/deliverables/rocky/castellan.yaml
+++ b/deliverables/rocky/castellan.yaml
@@ -10,6 +10,10 @@ releases:
       - hash: 6336a59b9b5f373efa653e6fcce8ea1c964fdbae
         repo: openstack/castellan
     version: 0.18.0
+  - projects:
+      - hash: a99da51d83bd43ea4c6584a99906d4d325c499de
+        repo: openstack/castellan
+    version: 0.19.0
 branches:
   - location: 0.18.0
     name: stable/rocky
