nova: release rocky 18.0.0.0rc2
Depends-On: https://review.openstack.org/593678/

Change-Id: I1c7c04a2e77d89cff549456636138d51730bd79b

--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -23,6 +23,10 @@ releases:
       - hash: ddc7c466d7c82521e1f5f21e51755596dd6895b1
         repo: openstack/nova
     version: 18.0.0.0rc1
+  - projects:
+      - hash: aebb29ed710fb4b5b92a6efa99f1d3dbdcc48a0c
+        repo: openstack/nova
+    version: 18.0.0.0rc2
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
