Force release python-tricircleclient for rocky
Forces release of committed changes this cycle and creates a
stable/rocky branch.

Change-Id: I73081fce3e9c97260e97f0dcf9b9697ead9a7fad
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/rocky/python-tricircleclient.yaml
+++ b/deliverables/rocky/python-tricircleclient.yaml
@@ -3,5 +3,16 @@ launchpad: python-tricircleclient
 release-model: cycle-with-intermediary
 team: tricircle
 type: client-library
+releases:
+  - projects:
+      - hash: a60ef68c25933eeb9b5636cf063f7340cfd6062d
+        repo: openstack/python-tricircleclient
+    version: 0.4.0
+    flags:
+      - forced
 repository-settings:
-  openstack/python-tricircleclient: {}
+  openstack/python-tricircleclient:
+    tarball-base: tricircleclient
+branches:
+  - location: 0.4.0
+    name: stable/rocky
