--- a/deliverables/_independent/python-tempestconf.yaml
+++ b/deliverables/_independent/python-tempestconf.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/python-tempestconf
         hash: b031af6b0aac077bdbd86a5a7cddb588b378d145
+  - version: 2.0.0
+    projects:
+      - repo: openstack/python-tempestconf
+        hash: d7db90e2782d526ac359e960bade6083d30fc3b9
 repository-settings:
   openstack/python-tempestconf: {}
