--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -148,5 +148,9 @@ releases:
       - hash: 59d629ed4c7bb29ea718db9ffb496eb4b6cbe46e
         repo: openstack/openstackdocstheme
     version: 1.22.0
+  - projects:
+      - hash: f5051b4323d2df4c8477a87eb7ce705825fb6b86
+        repo: openstack/openstackdocstheme
+    version: 1.23.0
 repository-settings:
   openstack/openstackdocstheme: {}
