--- a/deliverables/rocky/keystone-tempest-plugin.yaml
+++ b/deliverables/rocky/keystone-tempest-plugin.yaml
@@ -7,3 +7,9 @@ repository-settings:
   openstack/keystone-tempest-plugin: {}
 team: keystone
 type: tempest-plugin
+releases:
+  - version: 0.1.0
+    projects:
+      - repo: openstack/keystone-tempest-plugin
+        hash: 4dbc50b4e084592d631402cbe23785c8154e66fc
+        tarball-base: keystone_tempest_plugin
