Branch puppet modules for rocky
Create the stable/rocky branch for the puppet openstack modules
since we forgot to include it in the rc1 patch.

Change-Id: I0f7f689891aabfaf1c5b94b1bde8742da70f6b3f

--- a/deliverables/rocky/puppet-cinder.yaml
+++ b/deliverables/rocky/puppet-cinder.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 6394ccb22f76a346026042de04d4d0ca7f2f0de0
         repo: openstack/puppet-cinder
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
