--- a/deliverables/rocky/puppet-cloudkitty.yaml
+++ b/deliverables/rocky/puppet-cloudkitty.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 77515ec63336c336623cd4379b51b871eb06a103
         repo: openstack/puppet-cloudkitty
     version: 2.3.0
+branches:
+  - location: 2.3.0
+    name: stable/rocky
