--- a/deliverables/rocky/puppet-mistral.yaml
+++ b/deliverables/rocky/puppet-mistral.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 2ef4847d5e03b88c0494fd34710a263432d4f041
         repo: openstack/puppet-mistral
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
