--- a/deliverables/rocky/puppet-monasca.yaml
+++ b/deliverables/rocky/puppet-monasca.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 6e55416d29e273342a2d6f2c658d8e6a17d0f852
         repo: openstack/puppet-monasca
     version: 2.3.0
+branches:
+  - location: 2.3.0
+    name: stable/rocky
