--- a/deliverables/rocky/puppet-ovn.yaml
+++ b/deliverables/rocky/puppet-ovn.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 8bce24515726e737b247559f7bc5ac4f4faeeef1
         repo: openstack/puppet-ovn
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
