--- a/deliverables/rocky/puppet-vitrage.yaml
+++ b/deliverables/rocky/puppet-vitrage.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: a21be1ce9ce87cc995eef04233746bb43a29de38
         repo: openstack/puppet-vitrage
     version: 3.3.0
+branches:
+  - location: 3.3.0
+    name: stable/rocky
