--- a/deliverables/rocky/puppet-aodh.yaml
+++ b/deliverables/rocky/puppet-aodh.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 3a57c15d37db34c67e37c5ce0ba372289ee2a0f6
         repo: openstack/puppet-aodh
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
