--- a/deliverables/rocky/puppet-barbican.yaml
+++ b/deliverables/rocky/puppet-barbican.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: c06d5dbe4b571bf6962bf9608cbcca238442870d
         repo: openstack/puppet-barbican
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
