--- a/deliverables/rocky/puppet-ceilometer.yaml
+++ b/deliverables/rocky/puppet-ceilometer.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: ef9c82f4ad7eea9a731196525b04d61c5115d389
         repo: openstack/puppet-ceilometer
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
