--- a/deliverables/rocky/puppet-congress.yaml
+++ b/deliverables/rocky/puppet-congress.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: ab8a734de2602232a1bb46c8861ae5ea6d4892b5
         repo: openstack/puppet-congress
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
