--- a/deliverables/rocky/puppet-designate.yaml
+++ b/deliverables/rocky/puppet-designate.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: fd1442a130f7f566fd4a5dd8e1c5b2831702e5f0
         repo: openstack/puppet-designate
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
