--- a/deliverables/rocky/puppet-ec2api.yaml
+++ b/deliverables/rocky/puppet-ec2api.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: ec1082065d6cefb8bc0def3815f05c25b2aa84d6
         repo: openstack/puppet-ec2api
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
