--- a/deliverables/rocky/puppet-freezer.yaml
+++ b/deliverables/rocky/puppet-freezer.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: eb4592e0598acac5bb3a594f2a773cc49bff8c02
         repo: openstack/puppet-freezer
     version: 2.3.0
+branches:
+  - location: 2.3.0
+    name: stable/rocky
