--- a/deliverables/rocky/puppet-glance.yaml
+++ b/deliverables/rocky/puppet-glance.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 7a6e865e7fca5956c4ace19aa963c0ef133bd219
         repo: openstack/puppet-glance
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
