--- a/deliverables/rocky/puppet-glare.yaml
+++ b/deliverables/rocky/puppet-glare.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 17b1c62b922fa780f4cc2648ef130610d8c54738
         repo: openstack/puppet-glare
     version: 2.3.0
+branches:
+  - location: 2.3.0
+    name: stable/rocky
