--- a/deliverables/rocky/puppet-gnocchi.yaml
+++ b/deliverables/rocky/puppet-gnocchi.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 37d7e1f0553d4c6909b10a3d1321ac134c263443
         repo: openstack/puppet-gnocchi
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
