--- a/deliverables/rocky/puppet-heat.yaml
+++ b/deliverables/rocky/puppet-heat.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 6ab242333581c932932184dd55eea4d8af673247
         repo: openstack/puppet-heat
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
