--- a/deliverables/rocky/puppet-horizon.yaml
+++ b/deliverables/rocky/puppet-horizon.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: dd46ba1501fe0c44f90ac341703e2d9bd9d4048e
         repo: openstack/puppet-horizon
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
