--- a/deliverables/rocky/puppet-ironic.yaml
+++ b/deliverables/rocky/puppet-ironic.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 516b4e99e356a3225ab674ef042544dfa3484dbb
         repo: openstack/puppet-ironic
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
