--- a/deliverables/rocky/puppet-keystone.yaml
+++ b/deliverables/rocky/puppet-keystone.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: ec7748e561c550e27c7051d3b79bd768603843d0
         repo: openstack/puppet-keystone
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
