--- a/deliverables/rocky/puppet-magnum.yaml
+++ b/deliverables/rocky/puppet-magnum.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: fee68d28871dc9278fe55f537cb05e6e4955c4be
         repo: openstack/puppet-magnum
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
