--- a/deliverables/rocky/puppet-manila.yaml
+++ b/deliverables/rocky/puppet-manila.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 0a2687ab87649e5d6d511fe3c5b39e6ed15863fe
         repo: openstack/puppet-manila
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
