--- a/deliverables/rocky/puppet-murano.yaml
+++ b/deliverables/rocky/puppet-murano.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 99737fdf9231a2315adeab80a6ec74124d641a8c
         repo: openstack/puppet-murano
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
