--- a/deliverables/rocky/puppet-neutron.yaml
+++ b/deliverables/rocky/puppet-neutron.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: fee69de01ae5ddac3ee7ee0b37b33124c8aa874b
         repo: openstack/puppet-neutron
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
