--- a/deliverables/rocky/puppet-nova.yaml
+++ b/deliverables/rocky/puppet-nova.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: dad454f469d3b287ad86e8c6145644ca120d4c00
         repo: openstack/puppet-nova
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
