--- a/deliverables/rocky/puppet-octavia.yaml
+++ b/deliverables/rocky/puppet-octavia.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 7361bae076f842ebd7ac469aa3428cf49b8e722a
         repo: openstack/puppet-octavia
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
