--- a/deliverables/rocky/puppet-openstack_extras.yaml
+++ b/deliverables/rocky/puppet-openstack_extras.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: ef1a93bfec8e9af722b16041f7b44f68d06c41bb
         repo: openstack/puppet-openstack_extras
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
