--- a/deliverables/rocky/puppet-openstacklib.yaml
+++ b/deliverables/rocky/puppet-openstacklib.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 5e9263597a42e1fe7b3b09da4e87f18a5fed6ac2
         repo: openstack/puppet-openstacklib
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
