--- a/deliverables/rocky/puppet-oslo.yaml
+++ b/deliverables/rocky/puppet-oslo.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: ee8fc47cb2d8c94acf7decb5a70ff8b1e6edebde
         repo: openstack/puppet-oslo
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
