--- a/deliverables/rocky/puppet-panko.yaml
+++ b/deliverables/rocky/puppet-panko.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 62f77f97f9a57b5a0078dbc13e3d6b44e3006a75
         repo: openstack/puppet-panko
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
