--- a/deliverables/rocky/puppet-rally.yaml
+++ b/deliverables/rocky/puppet-rally.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 212cabb4f901aeb9e1f06fd471f1de59b778c3bf
         repo: openstack/puppet-rally
     version: 1.3.0
+branches:
+  - location: 1.3.0
+    name: stable/rocky
