--- a/deliverables/rocky/puppet-sahara.yaml
+++ b/deliverables/rocky/puppet-sahara.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 17087c989ac8187d854077fb29b93c8a1bfbfee3
         repo: openstack/puppet-sahara
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
