--- a/deliverables/rocky/puppet-swift.yaml
+++ b/deliverables/rocky/puppet-swift.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 998716b1d0e49a042a97d01c714788bf39e5f6ff
         repo: openstack/puppet-swift
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
