--- a/deliverables/rocky/puppet-tacker.yaml
+++ b/deliverables/rocky/puppet-tacker.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: ff9448ca8a59e8212d7df7f22a6fa6e1df5d6013
         repo: openstack/puppet-tacker
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
