--- a/deliverables/rocky/puppet-tempest.yaml
+++ b/deliverables/rocky/puppet-tempest.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: b6d053492ae0b7804bd9ae947ab3f04ce8eeca79
         repo: openstack/puppet-tempest
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
