--- a/deliverables/rocky/puppet-trove.yaml
+++ b/deliverables/rocky/puppet-trove.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: e65b323662fe77bcf250fdb7ed936e143bbe3ad3
         repo: openstack/puppet-trove
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
