--- a/deliverables/rocky/puppet-vswitch.yaml
+++ b/deliverables/rocky/puppet-vswitch.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: ed0e13c8867efceb51dfeece719c1c0dce98fbaf
         repo: openstack/puppet-vswitch
     version: 9.3.0
+branches:
+  - location: 9.3.0
+    name: stable/rocky
