--- a/deliverables/rocky/puppet-watcher.yaml
+++ b/deliverables/rocky/puppet-watcher.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 0b2e4b1a11a95c2394c81d6833a3bae5f59da319
         repo: openstack/puppet-watcher
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
