--- a/deliverables/rocky/puppet-zaqar.yaml
+++ b/deliverables/rocky/puppet-zaqar.yaml
@@ -18,3 +18,6 @@ releases:
       - hash: 96080c5b2c741450aa0e1c4d1119fdc18faea067
         repo: openstack/puppet-zaqar
     version: 13.3.0
+branches:
+  - location: 13.3.0
+    name: stable/rocky
