--- a/deliverables/pike/sushy.yaml
+++ b/deliverables/pike/sushy.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 659ef88e5a51e97d4b88e605cf8844e391d1206b
         repo: openstack/sushy
     version: 1.1.0
+  - projects:
+      - hash: ec068cdc16d1dd033791f15efb4a2dfbf5b4f802
+        repo: openstack/sushy
+    version: 1.1.1
 branches:
   - name: stable/pike
     location: 1.0.0
