--- a/deliverables/queens/octavia.yaml
+++ b/deliverables/queens/octavia.yaml
@@ -36,6 +36,10 @@ releases:
       - hash: 733e683c8606688b9b1f66283f1b35f3e3c1de57
         repo: openstack/octavia
     version: 2.0.1
+  - projects:
+      - hash: 880a309ab319e586ad1b0dc057b730abb013d3c5
+        repo: openstack/octavia
+    version: 2.0.2
 branches:
   - location: 2.0.0.0rc1
     name: stable/queens
