--- a/deliverables/rocky/neutron-lbaas-dashboard.yaml
+++ b/deliverables/rocky/neutron-lbaas-dashboard.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: dde6dfb2eba8eb2f1d9cd61986032b512330b281
         repo: openstack/neutron-lbaas-dashboard
     version: 5.0.0.0rc1
+  - projects:
+      - hash: af254ca03c7b152b404811350cba54dade741ff0
+        repo: openstack/neutron-lbaas-dashboard
+    version: 5.0.0.0rc2
 branches:
   - location: 5.0.0.0rc1
     name: stable/rocky
