--- a/deliverables/rocky/octavia-dashboard.yaml
+++ b/deliverables/rocky/octavia-dashboard.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 4f7a5591ae8dd61b25af7f746f20d8f058aa991c
         repo: openstack/octavia-dashboard
     version: 2.0.0.0rc1
+  - projects:
+      - hash: e582e3c82ef2a4b4351ab9213497363aa0324458
+        repo: openstack/octavia-dashboard
+    version: 2.0.0.0rc2
 branches:
   - location: 2.0.0.0rc1
     name: stable/rocky
