--- a/deliverables/rocky/octavia.yaml
+++ b/deliverables/rocky/octavia.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 3935dce08909b6e96bc68e2f051c95f734201334
         repo: openstack/octavia
     version: 3.0.0.0rc1
+  - projects:
+      - hash: 9d2fe7d40885da01b6ba0e53f602115dfd7ed33a
+        repo: openstack/octavia
+    version: 3.0.0.0rc2
 branches:
   - location: 3.0.0.0rc1
     name: stable/rocky
