--- a/deliverables/rocky/tempest.yaml
+++ b/deliverables/rocky/tempest.yaml
@@ -4,6 +4,7 @@ launchpad: tempest
 release-model: cycle-with-intermediary
 team: 'Quality Assurance'
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tempest/v19.0.0.html
 releases:
   - projects:
       - repo: openstack/tempest
