--- a/deliverables/rocky/patrole.yaml
+++ b/deliverables/rocky/patrole.yaml
@@ -3,6 +3,7 @@ launchpad: patrole
 release-model: cycle-with-intermediary
 team: 'Quality Assurance'
 type: other
+release-notes: https://docs.openstack.org/releasenotes/patrole/v0.4.0.html
 releases:
   - projects:
       - repo: openstack/patrole
