--- a/deliverables/queens/sushy.yaml
+++ b/deliverables/queens/sushy.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: ae06c028d41f4e284745b1c14988ef267127cf77
         repo: openstack/sushy
     version: 1.3.2
+  - projects:
+      - hash: 28556aae21a424e7a656f0aa55c291a481bdc7a3
+        repo: openstack/sushy
+    version: 1.3.3
 branches:
   - name: stable/queens
     location: 1.3.0
