--- a/deliverables/rocky/horizon.yaml
+++ b/deliverables/rocky/horizon.yaml
@@ -20,8 +20,16 @@ releases:
     projects:
       - hash: 4c9cf5f00e5b978e77678de6c4c257e733f4c46d
         repo: openstack/horizon
+  - version: 14.0.0.0rc2
+    projects:
+      - hash: 0aa126ddd073c9c4774ec82308283dac4ad09460
+        repo: openstack/horizon
 repository-settings:
   openstack/horizon: {}
 branches:
   - location: 14.0.0.0rc1
     name: stable/rocky
+cycle-highlights:
+  - Cinder Generic Groups are now supported
+  - Added server groups and server group members quota management
+  - Angularized Users and Server Groups panels are added to provide better UX
