Tagging Rocky RC2 for sahara, sahara-dashboard
Change-Id: I3e1594ee58bdca6f70ddc36ae47b5c13298dd724

--- a/deliverables/rocky/sahara-dashboard.yaml
+++ b/deliverables/rocky/sahara-dashboard.yaml
@@ -20,6 +20,10 @@ releases:
     projects:
       - repo: openstack/sahara-dashboard
         hash: 5309f5c7092b043eedd2b23db98e7d19009a2e8d
+  - version: 9.0.0.0rc2
+    projects:
+      - repo: openstack/sahara-dashboard
+        hash: db8283502a9fe1d3b540dbacf9e607255d81a110
 branches:
   - name: stable/rocky
     location: 9.0.0.0rc1
