os-win 4.0.1 release
The only changes are to the package setup stuff (requirements).
This release is necessary so openstack can uncap eventlet.

Change-Id: I0d72dcb16119ee6b3f9763ca764df83f5e91c5e6
Signed-off-by: Matthew Thode <mthode@mthode.org>

--- a/deliverables/rocky/os-win.yaml
+++ b/deliverables/rocky/os-win.yaml
@@ -9,6 +9,10 @@ releases:
     projects:
       - repo: openstack/os-win
         hash: 6a5325be766368a1523c4f66b371c06fbdd789ec
+  - version: 4.0.1
+    projects:
+      - repo: openstack/os-win
+        hash: f6ccfb6ebb0c5b7bb206cadbc3882c6c5466e927
 repository-settings:
   openstack/os-win: {}
 branches:
