--- a/deliverables/rocky/vitrage-tempest-plugin.yaml
+++ b/deliverables/rocky/vitrage-tempest-plugin.yaml
@@ -7,3 +7,8 @@ repository-settings:
   openstack/vitrage-tempest-plugin: {}
 team: vitrage
 type: tempest-plugin
+releases:
+  - version: 1.1.0
+    projects:
+      - repo: openstack/vitrage-tempest-plugin
+        hash: 1f78e663ad28df4d1a1261f384e170b911c5cc0e
