--- a/deliverables/rocky/heat.yaml
+++ b/deliverables/rocky/heat.yaml
@@ -23,5 +23,9 @@ releases:
     projects:
       - repo: openstack/heat
         hash: b95ca369bb29e3dfc0de8a61c6744fad886640ba
+  - version: 11.0.0.0rc2
+    projects:
+      - repo: openstack/heat
+        hash: 207498dea1e9ca23485511cadbbdda85079e391f
 repository-settings:
   openstack/heat: {}
