--- a/deliverables/rocky/cinder.yaml
+++ b/deliverables/rocky/cinder.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: a3666e9a408eb71861cd9557cefe952fa89324b1
         repo: openstack/cinder
     version: 13.0.0.0rc1
+  - projects:
+      - hash: b067a847cf2a14d450682d15f9555f0d5e9ca9c2
+        repo: openstack/cinder
+    version: 13.0.0.0rc2
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
