--- a/deliverables/ocata/heat.yaml
+++ b/deliverables/ocata/heat.yaml
@@ -57,5 +57,9 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 76da5a4a2fb0f7315d1d8a3d003f6ab0e4de0c07
+  - version: 8.0.7
+    projects:
+      - repo: openstack/heat
+        hash: 21a4740a885184a95b37758d2b816443633db953
 repository-settings:
   openstack/heat: {}
