--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -49,5 +49,9 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 882c201809f7d21967d97653db357f4115105d5f
+  - version: 9.0.5
+    projects:
+      - repo: openstack/heat
+        hash: e4312ec9b1cc9d5e47d56f7d3f4560f9dcf5986a
 repository-settings:
   openstack/heat: {}
