--- a/deliverables/queens/heat.yaml
+++ b/deliverables/queens/heat.yaml
@@ -36,6 +36,10 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 825731d81b6cba5d79cbab22a731965ff4f9c6a0
+  - version: 10.0.2
+    projects:
+      - repo: openstack/heat
+        hash: 1f08105fbd17f8f51999689f8b0113201870475c
 repository-settings:
   openstack/heat: {}
 release-notes: https://docs.openstack.org/releasenotes/heat/queens.html
