--- a/deliverables/rocky/heat-dashboard.yaml
+++ b/deliverables/rocky/heat-dashboard.yaml
@@ -16,5 +16,9 @@ releases:
     projects:
       - repo: openstack/heat-dashboard
         hash: 3812cc2667d082af6625b0a6052ef54ffc1d4f71
+  - version: 1.4.0
+    projects:
+      - repo: openstack/heat-dashboard
+        hash: 6b64d8572987808416ae1236279fdafd3f7dca98
 repository-settings:
   openstack/heat-dashboard: {}
