--- a/deliverables/rocky/heat-agents.yaml
+++ b/deliverables/rocky/heat-agents.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/heat-agents
         hash: 10f28e8491edb2cd8b28b40c9ed36d6102a60cc7
+  - version: 1.7.0
+    projects:
+      - repo: openstack/heat-agents
+        hash: fdd6a5f537ad39e092f69bc05307ae7640384430
 repository-settings:
   openstack/heat-agents: {}
