Add cycle-highlights deadline to Stein
This adds some deadline information to the Stein schedule so teams can
plan when they need to gather these in time for inclusion.

Change-Id: I9e1a4ab132e973e97415a35b102114071ea403a8
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/doc/source/stein/schedule.yaml
+++ b/doc/source/stein/schedule.yaml
@@ -123,6 +123,7 @@ cycle:
   start: '2019-04-01'
   x-project:
     - s-finalrc
+    - s-cycle-highlights
 - end: '2019-04-12'
   name: R+0
   start: '2019-04-08'
