--- a/deliverables/rocky/openstack-ansible.yaml
+++ b/deliverables/rocky/openstack-ansible.yaml
@@ -143,6 +143,10 @@ releases:
       - hash: 963bd85ae283b081012a9843faed56d447e95d6e
         repo: openstack/openstack-ansible
     version: 18.0.0.0rc1
+  - projects:
+      - hash: 05542c3d590af366028e61de5a26640178277df1
+        repo: openstack/openstack-ansible
+    version: 18.0.0.0rc2
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
