--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -865,6 +865,10 @@ releases:
       - hash: ccb0f302e12197aaf76ab74b2f5252d0945a2422
         repo: openstack/openstack-ansible
     version: 17.0.8
+  - projects:
+      - hash: 36ff3eb13b42a5ad90b1e8e00f6f0a10fdd1c8d1
+        repo: openstack/openstack-ansible
+    version: 17.1.0
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
