--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1580,6 +1580,10 @@ releases:
       - hash: 360c14cffc09533d9aba03c44b1080a87323bdc9
         repo: openstack/openstack-ansible
     version: 16.0.17
+  - projects:
+      - hash: a2edd3fb5bd9447d3ed8a8ee5b4a35a2422a31a2
+        repo: openstack/openstack-ansible
+    version: 16.0.18
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
