--- a/deliverables/rocky/octavia.yaml
+++ b/deliverables/rocky/octavia.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 9d2fe7d40885da01b6ba0e53f602115dfd7ed33a
         repo: openstack/octavia
     version: 3.0.0.0rc2
+  - projects:
+      - hash: 8d74497cf6fd22620d0881ad2549acd69a537776
+        repo: openstack/octavia
+    version: 3.0.0.0rc3
 branches:
   - location: 3.0.0.0rc1
     name: stable/rocky
