--- a/deliverables/rocky/octavia-dashboard.yaml
+++ b/deliverables/rocky/octavia-dashboard.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: e582e3c82ef2a4b4351ab9213497363aa0324458
         repo: openstack/octavia-dashboard
     version: 2.0.0.0rc2
+  - projects:
+      - hash: 7ebcf9936fb8d1cc472d0cf81979c49356098cb2
+        repo: openstack/octavia-dashboard
+    version: 2.0.0.0rc3
 branches:
   - location: 2.0.0.0rc1
     name: stable/rocky
