--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -2208,6 +2208,10 @@ releases:
       - hash: 693d3d63c1b43ebdc6eb2c691e2748ecac4bf3ca
         repo: openstack/openstack-ansible
     version: 15.1.25
+  - projects:
+      - hash: 4b3862c191b7d980a7ca4cb739f184acb727f869
+        repo: openstack/openstack-ansible
+    version: 15.1.26
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
