--- a/deliverables/rocky/vitrage-dashboard.yaml
+++ b/deliverables/rocky/vitrage-dashboard.yaml
@@ -17,5 +17,9 @@ releases:
     projects:
       - repo: openstack/vitrage-dashboard
         hash: 598596ad6ca77e14fe04415e2ce960c3da23d8b8
+  - version: 1.6.1
+    projects:
+      - repo: openstack/vitrage-dashboard
+        hash: 429c0761a8c14290dc55c5dd63d53509b04e9b44
 cycle-highlights:
   - 'New UI for alarm history'
