add release 7.0.1 for ec2-api
Change-Id: I9e0c74a6716b81a256cf555ef24fd67fa9c9e07f

--- a/deliverables/rocky/ec2-api.yaml
+++ b/deliverables/rocky/ec2-api.yaml
@@ -11,6 +11,10 @@ releases:
     projects:
       - repo: openstack/ec2-api
         hash: c65cb663de5d1cfb239bbf32610f0f7a71c7e170
+  - version: 7.1.0
+    projects:
+      - repo: openstack/ec2-api
+        hash: 99ef804daf090f7b107acf4484e829e6b7f2bb32
 branches:
   - location: 7.0.0
     name: stable/rocky
