--- a/deliverables/rocky/neutron-fwaas.yaml
+++ b/deliverables/rocky/neutron-fwaas.yaml
@@ -23,6 +23,10 @@ releases:
       - hash: 5b3ac1ebda160e80ba3a38c1f113f85b797572d6
         repo: openstack/neutron-fwaas
     version: 13.0.0.0rc1
+  - projects:
+      - hash: 7567c42e99b298201b30593699d1e180e5bfa759
+        repo: openstack/neutron-fwaas
+    version: 13.0.0.0rc2
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
