Rocky release watcher-tempest-plugin
Depends-on: https://review.openstack.org/595846
Change-Id: Ib6bff5942558cc35298373cf476c7b56ee1bbcb1

--- a/deliverables/rocky/watcher-tempest-plugin.yaml
+++ b/deliverables/rocky/watcher-tempest-plugin.yaml
@@ -3,6 +3,12 @@ include-pypi-link: no
 launchpad: watcher
 release-model: cycle-with-intermediary
 release-type: python-pypi
+releases:
+  - version: 1.0.0
+    projects:
+      - repo: openstack/watcher-tempest-plugin
+        hash: 8b78066462a76eba0242e264d3598adbd38eabbc
+        tarball-base: watcher-tempest-plugin
 repository-settings:
   openstack/watcher-tempest-plugin: {}
 team: watcher
